style for office- notebook and pc

--- a/src/main/resources/static/css/specifiedStyles/gamingPC.css
+++ b/src/main/resources/static/css/specifiedStyles/gamingPC.css
@@ -14,10 +14,17 @@ body{
 body{
     font-family: Arial, sans-serif;
     font-size: 20px;
-    background-image: url("images/body-background.png");
+    font-weight: bold;
+    text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black;
+    color: antiquewhite;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
     background-color: rgb(53, 173, 255);
+}
+
+.submitPC{
+    background-color: antiquewhite;
+    width: 30%;
 }
