--- a/src/main/resources/templates/gamingNB.html
+++ b/src/main/resources/templates/gamingNB.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/css/gamingNB.css}" />
+    <link rel="stylesheet" th:href="@{/css/specifiedStyles/gamingNB.css}" />
     <title>Gaming Notebooks</title>
 </head>
 <body>
@@ -15,52 +15,52 @@
             <p>
             <h3>Monitor size in Inches</h3>
             <label>
-                <input type="radio" name="windowsizeInInch" value="13Inch">
+                <input class="windowsizeInInch" type="radio" name="windowsizeInInch" value="13Inch">
             </label>13 Inch
             <label>
-                <input type="radio" name="windowsizeInInch" value="14Inch">
+                <input class="windowsizeInInch" type="radio" name="windowsizeInInch" value="14Inch">
             </label>14 Inch
             <label>
-                <input type="radio" name="windowsizeInInch" value="15Inch">
+                <input class="windowsizeInInch" type="radio" name="windowsizeInInch" value="15Inch">
             </label>15 Inch
             <p>
             <p>
             <h3>CPU:</h3>
             <label>
-                <input type="radio" name="cpu" value="IntelCorei5-1135G7">
+                <input class="cpu" type="radio" name="cpu" value="IntelCorei5-1135G7">
             </label>Intel Core i5-1135G7h
             <label>
-                <input type="radio" name="cpu" value="IntelCorei7-1165G7">
+                <input class="cpu" type="radio" name="cpu" value="IntelCorei7-1165G7">
             </label>Intel Core i7-1165G7
             <label>
-                <input type="radio" name="cpu" value="IntelCorei9-11900H">
+                <input class="cpu" type="radio" name="cpu" value="IntelCorei9-11900H">
             </label>Intel Core i9-11900H
             <p>
             <p>
             <h3>RAM:</h3>
             <label>
-                <input type="radio" name="ram" value="16GB">
+                <input class="ram" type="radio" name="ram" value="16GB">
             </label>16 GB
             <label>
-                <input type="radio" name="ram" value="32GB">
+                <input class="ram" type="radio" name="ram" value="32GB">
             </label>32 GB
             <label>
-                <input type="radio" name="ram" value="64GB">
+                <input class="ram" type="radio" name="ram" value="64GB">
             </label>64 GB
             <p>
             <p>
             <h3>Layout:</h3>
             <label>
-                <input type="radio" name="layout" value="de">
+                <input class="layout" type="radio" name="layout" value="de">
             </label>German
             <label>
-                <input type="radio" name="layout" value="en">
+                <input class="layout" type="radio" name="layout" value="en">
             </label>English
             <label>
-                <input type="radio" name="layout" value="fr">
+                <input class="layout" type="radio" name="layout" value="fr">
             </label>French
             <p>
-                <button type="submit" class="submitNB" id="submitNB" name="action" value="submit"><b>Submit</b></button>
+            <button type="submit" class="submitNB" id="submitNB" name="action" value="submit"><b>Submit</b></button>
             <div th:if="${message}" th:text="${message}">worked!</div>
         </form>
     </div>
