--- a/src/main/resources/templates/officeNB.html
+++ b/src/main/resources/templates/officeNB.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{/css/specifiedStyles/officeNB.css}" />
     <title>Gaming Notebooks</title>
 </head>
 <body>
