put all in controller-packages

--- a/src/main/resources/static/css/specifiedStyles/officePC.css
+++ b/src/main/resources/static/css/specifiedStyles/officePC.css
@@ -24,7 +24,7 @@ body{
     background-color: rgb(53, 173, 255);
 }
 
-.submitPC{
+.submitNB{
     background-color: antiquewhite;
     width: 30%;
 }
