tryed to fix bug

--- a/src/main/resources/templates/gamingPC.html
+++ b/src/main/resources/templates/gamingPC.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Gaming PCs</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/specifiedStyles/gamingPC.css}" />
+    <title>Gaming PCs</title>
 </head>
 <body>
 <div class="main">
     <div class="main_container">
-        <form action="/officePC_form" method="post">
+        <form action="/gamingPCForm" method="post">
             <h2>Choose:</h2>
             <p>
             <h3>CPU:</h3>
