--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/style.css}" />
@@ -14,7 +13,7 @@
 <body>
 <div class="main">
     <div class="main_container">
-        <form id="homepage_form" action="/homepage_form" method="get">
+        <form id="homepage_form" action="/homepageForm" method="get">
             <p>
                 <button type="submit" class="officePC" name="action" id="officePC" value="officePC"><b>OFFICE PC</b></button>
                 <button type="submit" class="officeNB" name="action" id="officeNB" value="officeNB"><b>OFFICE NOTEBOOK</b></button>
