--- a/src/main/resources/templates/officeNB.html
+++ b/src/main/resources/templates/officeNB.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/specifiedStyles/officeNB.css}" />
@@ -10,7 +9,7 @@
 <body>
 <div class="main">
     <div class="main_container">
-        <form action="/officeNB_form" method="post">
+        <form action="/officeNBForm" method="post">
             <h2>Choose:</h2>
             <p>
             <h3>Monitor size in Inches</h3>
