--- a/src/main/resources/templates/officeNB.html
+++ b/src/main/resources/templates/officeNB.html
@@ -9,7 +9,7 @@
 <body>
 <div class="main">
     <div class="main_container">
-        <form action="/officeNBForm" method="post">
+        <form action="/officeNBForm" method="get">
             <h2>Choose:</h2>
             <p>
             <h3>Monitor size in Inches</h3>
