--- a/src/main/resources/templates/officePC.html
+++ b/src/main/resources/templates/officePC.html
@@ -9,7 +9,7 @@
 <body>
 <div class="main">
     <div class="main_container">
-        <form action="/officePCForm" method="post">
+        <form action="/officePCForm" method="get">
             <h2>Choose:</h2>
             <p>
             <h3>CPU:</h3>
