--- a/src/main/resources/templates/gamingPC.html
+++ b/src/main/resources/templates/gamingPC.html
@@ -9,7 +9,7 @@
 <body>
 <div class="main">
     <div class="main_container">
-        <form id="gamingPC_form" action="/gamingPC" method="get">
+        <form id="gamingPCForm" action="/gamingPCForm" method="get">
             <h2>Choose:</h2>
             <p>
             <h3>CPU:</h3>
