--- a/src/main/resources/templates/gamingNB.html
+++ b/src/main/resources/templates/gamingNB.html
@@ -6,23 +6,29 @@
     <link rel="stylesheet" th:href="@{/css/specifiedStyles/gamingNB.css}" />
     <title>Gaming Notebooks</title>
 </head>
-<body>
-    <h2>Choose:</h2>
-    <select name="monitorsizes" id="monitorsizes">
-        <option th:each="monitorsize : ${monitorsizes}" th:value="${monitorsize}" th:text="${monitorsize}"></option>
-    </select>
-    <select name="cpus" id="cpus">
-        <option th:each="cpu : ${cpus}" th:value="${cpus}" th:text="${cpus}"></option>
-    </select>
-    <select name="gpus" id="gpus">
-        <option th:each="gpu : ${gpus}" th:value="${gpus}" th:text="${gpus}"></option>
-    </select>
-    <select name="rams" id="rams">
-        <option th:each="ram : ${rams}" th:value="${rams}" th:text="${rams}"></option>
-    </select>
-    <select name="layouts" id="layouts">
-        <option th:each="layout : ${layouts}" th:value="${layouts}" th:text="${layouts}"></option>
-    </select>
-    <button type="submit" class="submitNB" id="submitNB" name="action" value="submit"><b>Submit</b></button>
-</body>
+    <body>
+        <form action="/gamingNotebookInformations" method="get">
+            <h2>Choose:</h2>
+            <select name="monitorsizes" id="monitorsizes">
+                <option th:each="monitorsize : ${monitorsizes}" th:value="${monitorsize}" th:text="${monitorsize}"></option>
+            </select>
+
+            <select name="cpus" id="cpus">
+                <option th:each="cpu : ${cpus}" th:value="${cpu}" th:text="${cpu}"></option>
+            </select>
+
+            <select name="gpus" id="gpus">
+                <option th:each="gpu : ${gpus}" th:value="${gpu}" th:text="${gpu}"></option>
+            </select>
+
+            <select name="rams" id="rams">
+                <option th:each="ram : ${rams}" th:value="${ram}" th:text="${ram}"></option>
+            </select>
+
+            <select name="layouts" id="layouts">
+                <option th:each="layout : ${layouts}" th:value="${layout}" th:text="${layout}"></option>
+            </select>
+            <button type="submit" class="submitNB" id="submitNB" name="action" value="submit"><b>Submit</b></button>
+        </form>
+    </body>
 </html>
