--- a/src/main/resources/templates/gamingPC.html
+++ b/src/main/resources/templates/gamingPC.html
@@ -7,59 +7,24 @@
     <title>Gaming PCs</title>
 </head>
 <body>
-<div class="main">
-    <div class="main_container">
-        <form id="gamingPCForm" action="/gamingPCForm" method="get">
-            <h2>Choose:</h2>
-            <p>
-            <h3>CPU:</h3>
-            <label>
-                <input type="radio" name="cpu" value="IntelCorei5-1135G7">
-            </label>Intel Core i5-1135G7h
-            <label>
-                <input type="radio" name="cpu" value="IntelCorei7-1165G7">
-            </label>Intel Core i7-1165G7
-            <label>
-                <input type="radio" name="cpu" value="IntelCorei9-11900H">
-            </label>Intel Core i9-11900H
-            <p>
-            <p>
-            <h3>GPU:</h3>
-            <label>
-                <input type="radio" name="gpu" value="NVIDIARTX2080">
-            </label>NVIDIA RTX 2080
-            <label>
-                <input type="radio" name="gpu" value="NVIDIARTX3080">
-            </label>NVIDIA RTX 3080
-            <label>
-                <input type="radio" name="gpu" value="NVIDIARTX4080">
-            </label>NVIDIA RTX 4080
-            <p>
-            <p>
-            <h3>RAM:</h3>
-            <label>
-                <input type="radio" name="ram" value="16GB">
-            </label>16 GB
-            <label>
-                <input type="radio" name="ram" value="32GB">
-            </label>32 GB
-            <label>
-                <input type="radio" name="ram" value="64GB">
-            </label>64 GB
-            <p>
-            <p>
-            <h3>Cooling:</h3>
-            <label>
-                <input type="radio" name="cooling" value="aio">
-            </label>All in one Watercooling
-            <label>
-                <input type="radio" name="cooling" value="block">
-            </label>Blockcooling
-            <p>
-                <button type="submit" class="submitPC" id="submitPC" name="action" value="submit"><b>Submit</b></button>
-            <p>
-        </form>
-    </div>
-</div>
+<form action="/gamingPCInformations" method="get">
+    <h2>Choose:</h2>
+    <select name="cpus" id="cpus">
+        <option th:each="cpu : ${cpus}" th:value="${cpu}" th:text="${cpu}"></option>
+    </select>
+
+    <select name="gpus" id="gpus">
+        <option th:each="gpu : ${gpus}" th:value="${gpu}" th:text="${gpu}"></option>
+    </select>
+
+    <select name="rams" id="rams">
+        <option th:each="ram : ${rams}" th:value="${ram}" th:text="${ram}"></option>
+    </select>
+
+    <select name="coolings" id="coolings">
+        <option th:each="cooling : ${coolings}" th:value="${cooling}" th:text="${cooling}"></option>
+    </select>
+    <button type="submit" class="submitPC" id="submitPC" name="action" value="submit"><b>Submit</b></button>
+</form>
 </body>
 </html>
