--- a/src/main/resources/templates/officeNB.html
+++ b/src/main/resources/templates/officeNB.html
@@ -6,63 +6,16 @@
     <link rel="stylesheet" th:href="@{/css/specifiedStyles/officeNB.css}" />
     <title>Gaming Notebooks</title>
 </head>
-<body>
-<div class="main">
-    <div class="main_container">
-        <form action="/officeNBForm" method="get">
+    <body>
+        <form action="/officeNotebookInformations" method="get">
             <h2>Choose:</h2>
-            <p>
-            <h3>Monitor size in Inches</h3>
-            <label>
-                <input type="radio" name="windowsizeInInch" value="13Inch">
-            </label>13 Inch
-            <label>
-                <input type="radio" name="windowsizeInInch" value="14Inch">
-            </label>14 Inch
-            <label>
-                <input type="radio" name="windowsizeInInch" value="15Inch">
-            </label>15 Inch
-            <p>
-            <p>
-            <h3>CPU:</h3>
-            <label>
-                <input type="radio" name="cpu" value="IntelCorei5-1135G7">
-            </label>Intel Core i5-1135G7h
-            <label>
-                <input type="radio" name="cpu" value="IntelCorei7-1165G7">
-            </label>Intel Core i7-1165G7
-            <label>
-                <input type="radio" name="cpu" value="IntelCorei9-11900H">
-            </label>Intel Core i9-11900H
-            <p>
-            <p>
-            <h3>RAM:</h3>
-            <label>
-                <input type="radio" name="ram" value="16GB">
-            </label>16 GB
-            <label>
-                <input type="radio" name="ram" value="32GB">
-            </label>32 GB
-            <label>
-                <input type="radio" name="ram" value="64GB">
-            </label>64 GB
-            <p>
-            <p>
-            <h3>Layout:</h3>
-            <label>
-                <input type="radio" name="layout" value="de">
-            </label>German
-            <label>
-                <input type="radio" name="layout" value="en">
-            </label>English
-            <label>
-                <input type="radio" name="layout" value="fr">
-            </label>French
-            <p>
+            <select name="monitorsizes" id="monitorsizes">
+                <option th:each="monitorsize : ${monitorsizes}" th:value="${monitorsize}" th:text="${monitorsize}"></option>
+            </select>
+            <select name="layouts" id="layouts">
+                <option th:each="layout : ${layouts}" th:value="${layout}" th:text="${layout}"></option>
+            </select>
             <button type="submit" class="submitNB" id="submitNB" name="action" value="submit"><b>Submit</b></button>
-            <div th:if="${message}" th:text="${message}">worked</div>
         </form>
-    </div>
-</div>
-</body>
+    </body>
 </html>
