--- a/src/main/resources/templates/gamingNB.html
+++ b/src/main/resources/templates/gamingNB.html
@@ -28,7 +28,7 @@
             <select name="layouts" id="layouts">
                 <option th:each="layout : ${layouts}" th:value="${layout}" th:text="${layout}"></option>
             </select>
-            <button type="submit" class="submitNB" id="submitNB" name="action" value="submit"><b>Submit</b></button>
+            <button type="submit" class="submit" id="submit" name="action" value="submitShop"><b>Submit</b></button>
         </form>
     </body>
 </html>
