--- a/src/main/resources/templates/gamingPC.html
+++ b/src/main/resources/templates/gamingPC.html
@@ -24,7 +24,7 @@
     <select name="coolings" id="coolings">
         <option th:each="cooling : ${coolings}" th:value="${cooling}" th:text="${cooling}"></option>
     </select>
-    <button type="submit" class="submitPC" id="submitPC" name="action" value="submit"><b>Submit</b></button>
+    <button type="submit" class="submit" id="submit" name="action" value="submitShop"><b>Submit</b></button>
 </form>
 </body>
 </html>
