--- a/src/main/resources/templates/gamingNB.html
+++ b/src/main/resources/templates/gamingNB.html
@@ -9,24 +9,8 @@
     <body>
         <form action="/gamingNotebookInformations" method="get">
             <h2>Choose:</h2>
-            <select name="monitorsizes" id="monitorsizes">
-                <option th:each="monitorsize : ${monitorsizes}" th:value="${monitorsize}" th:text="${monitorsize}"></option>
-            </select>
-
-            <select name="cpus" id="cpus">
-                <option th:each="cpu : ${cpus}" th:value="${cpu}" th:text="${cpu}"></option>
-            </select>
-
-            <select name="gpus" id="gpus">
-                <option th:each="gpu : ${gpus}" th:value="${gpu}" th:text="${gpu}"></option>
-            </select>
-
-            <select name="rams" id="rams">
-                <option th:each="ram : ${rams}" th:value="${ram}" th:text="${ram}"></option>
-            </select>
-
-            <select name="layouts" id="layouts">
-                <option th:each="layout : ${layouts}" th:value="${layout}" th:text="${layout}"></option>
+            <select name="gamingNotebooks" id="gamingNotebooks">
+                <option th:each="gamingNotebook : ${gamingNotebooks}" th:value="${gamingNotebooks}" th:text="${gamingNotebooks}"></option>
             </select>
             <button type="submit" class="submit" id="submit" name="action" value="submitShop"><b>Submit</b></button>
         </form>
