--- a/src/main/resources/templates/gamingPC.html
+++ b/src/main/resources/templates/gamingPC.html
@@ -9,20 +9,8 @@
 <body>
 <form action="/gamingPCInformations" method="get">
     <h2>Choose:</h2>
-    <select name="cpus" id="cpus">
-        <option th:each="cpu : ${cpus}" th:value="${cpu}" th:text="${cpu}"></option>
-    </select>
-
-    <select name="gpus" id="gpus">
-        <option th:each="gpu : ${gpus}" th:value="${gpu}" th:text="${gpu}"></option>
-    </select>
-
-    <select name="rams" id="rams">
-        <option th:each="ram : ${rams}" th:value="${ram}" th:text="${ram}"></option>
-    </select>
-
-    <select name="coolings" id="coolings">
-        <option th:each="cooling : ${coolings}" th:value="${cooling}" th:text="${cooling}"></option>
+    <select name="gamingPCs" id="gamingPCs">
+        <option th:each="gamingPC : ${gamingPCs}" th:value="${gamingPCs}" th:text="${gamingPCs}"></option>
     </select>
     <button type="submit" class="submit" id="submit" name="action" value="submitShop"><b>Submit</b></button>
 </form>
